# translit

./: .hgignore  README.rst  setup.cfg  setup.py  setup_translit.py  test.py
translit/: __init__.py  codec.py  downgrade.py  iconv.py  upgrade.py
translit/unidecode/: __init__.py  generate_table_h.py  setup.py  table.h
