[global]
setup_hooks = setup.use_3to2

[metadata]
name = translit
version = 0.1
summary = Transliterate between Unicode and smaller coded character sets
description-file = README.rst
home-page = https://bitbucket.org/spirit/translit
download-url = https://bitbucket.org/spirit/translit/downloads
author = spirit
author-email = hiddenspirit@gmail.com
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
requires-dist = pyenchant
requires-python = >=3.2

[files]
packages =
    translit
    translit.unidecode
    translit.unidecode.tables
extra_files =
    COPYING
    COPYING.LESSER
    README.rst
    setup.py
    test.py
